fixing the big pictures on mobile phones problem

--- a/docs/fa_IR/style.css
+++ b/docs/fa_IR/style.css
@@ -18,6 +18,7 @@ body {
 .part-pic {
     border-radius: 30px;
     min-height: 36vh;
+    max-width: 100%;
 }
 
 table {
